# OSUE

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  main.c  mydiff.c  mydiff.h
src/: child.c  child.h  client.c  common.h  main.c  main.h  mydiff.c  mydiff.h  process.c  process.h  secvault.c  secvault.h  server.c  util.c  util.h
src/client/: client.c  client.h  main.c  main.h
src/common/: common.c  common.h
src/module/: common.h  data.c
src/server/: main.c  main.h  server.c  server.h
src/svctl/: svctl.c  svctl.h
test/: difftest1.txt
ue1a/: CMakeLists.txt  Doxyfile  Makefile
ue1a/src/: compress.c  compress.h  main.c  main.h  util.c  util.h
ue1a/test/: compressme.txt  compressme2.txt  difftest2.txt
ue1b/: CMakeLists.txt  Makefile
ue1b/oldsrc/: common.h  server.c
ue1b/src/: client.c  common.c  common.h  server.c
ue2/: CMakeLists.txt  Doxyfile  Makefile
ue2/src/: main.c  main.h  process.c  process.h  util.c  util.h
ue3/: CMakeLists.txt  Makefile
ue3/src/client/: client.h  main.c  main.h
ue3/src/common/: common.c  common.h
ue3/src/generator/: main.c  main.h
ue3/src/server/: main.h  server.c
ue3/src/supervisor/: main.c  main.h
ue4/: Makefile
ue4/src/module/: ctl.c  ctl.h  data.h  module.c  module.h
